新增AI决策Prompt与解析约束